Fix font and layout issues

--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,6 @@
 .about-info {
   padding: 10rem 3rem;
-  background-image: url(../img/bkgrnd.png);
+  background-image: url(../img/about-dektop.png);
   background-size: cover;
 }
 
@@ -70,10 +70,12 @@
 
 .logo {
   align-items: center;
+  align-items: center;
   border-radius: 4px;
   border: 2px solid var(--color-accent);
   display: flex;
-  padding: 2rem 5rem;
+  gap: 1rem;
+  padding: 2rem 4rem;
 }
 
 .logo-heading {
@@ -85,7 +87,12 @@
 
 @media screen and (min-width: 768px) {
   .container {
-    gap: 3rem;
+    gap: 5rem;
+  }
+
+  .logo {
+    font-size: 2.5rem;
+    font-weight: 700;
   }
 }
 
@@ -120,9 +127,16 @@
 }
 
 .red-filter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background-color: rgba(247, 77, 18, 0.5);
   height: 100%;
   width: 100%;
+  font-size: 2rem;
+  color: var(--color-accent);
+  font-weight: 700;
 }
 
 @media screen and (min-width: 768px) {
@@ -151,4 +165,9 @@
     width: 30%;
     min-width: 350px;
   }
+
+  .red-filter {
+    font-size: 2.5rem;
+  }
+
 }
